--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "ng-sleepy-zuzki",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "engines" : {
+    "npm" : ">=9.0.0 <10.9.0",
+    "node" : ">=20.0.0 <22.14.0"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
