--- a/.npmrc
+++ b/.npmrc
@@ -3,3 +3,5 @@ use-node-version=22.12.0
 use-pnpm-version=10.0.0
 auto-install-peers=true
 node-linker=hoisted
+@awesome.me:registry=https://npm.fontawesome.com/
+//npm.fontawesome.com/:_authToken=${FONTAWESOME_PACKAGE_TOKEN}
