--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ng-sleepy-zuzki",
   "version": "1.0.0",
-  "engines" : {
-    "npm" : ">=9.0.0 <10.9.0",
-    "node" : ">=20.0.0 <22.14.0"
+  "engines": {
+    "npm": ">=9.0.0 <10.9.0",
+    "node": ">=20.0.0 <22.14.0"
   },
   "scripts": {
     "ng": "ng",
@@ -14,33 +14,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.0.0",
-    "@angular/common": "^19.0.0",
-    "@angular/compiler": "^19.0.0",
-    "@angular/core": "^19.0.0",
-    "@angular/forms": "^19.0.0",
-    "@angular/platform-browser": "^19.0.0",
-    "@angular/platform-browser-dynamic": "^19.0.0",
-    "@angular/router": "^19.0.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "@angular/animations": "^19.2.8",
+    "@angular/common": "^19.2.8",
+    "@angular/compiler": "^19.2.8",
+    "@angular/core": "^19.2.8",
+    "@angular/forms": "^19.2.8",
+    "@angular/platform-browser": "^19.2.8",
+    "@angular/platform-browser-dynamic": "^19.2.8",
+    "@angular/router": "^19.2.8",
+    "@awesome.me/kit-15d5a6a4b5": "^1.0.7",
+    "@fortawesome/angular-fontawesome": "^1.0.0",
+    "rxjs": "~7.8.2",
+    "tslib": "^2.8.1",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.6",
-    "@angular/cli": "^19.0.6",
-    "@angular/compiler-cli": "^19.0.0",
-    "@types/jasmine": "~5.1.0",
-    "autoprefixer": "^10.4.20",
+    "@angular-devkit/build-angular": "^19.2.9",
+    "@angular/cli": "^19.2.9",
+    "@angular/compiler-cli": "^19.2.8",
+    "@types/jasmine": "~5.1.7",
+    "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.4.0",
-    "karma": "~6.4.0",
+    "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
+    "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "postcss": "^8.5.1",
+    "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "typescript": "~5.6.2"
+    "typescript": "~5.6.3"
   },
   "packageManager": "pnpm@10.0.0+sha512.b8fef5494bd3fe4cbd4edabd0745df2ee5be3e4b0b8b08fa643aa3e4c6702ccc0f00d68fa8a8c9858a735a0032485a44990ed2810526c875e416f001b17df12b"
 }
