--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "^19.2.8",
     "@awesome.me/kit-15d5a6a4b5": "^1.0.7",
     "@fortawesome/angular-fontawesome": "^1.0.0",
+    "@ngneat/overview": "6.1.1",
+    "@ngxpert/hot-toast": "4.1.2",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.0"
