--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.5.3",
+    "source-map-explorer": "^2.5.3",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.3"
   },
